www/styles/styles.css
@font-face {
  font-family: Aptos;
  src: url("../assets/fonts/Aptos.ttf") format("truetype");
}

html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  scroll-behavior: smooth;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
li,
ol,
main,
aside,
pre,
code {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  --Text: #fff;
  --Background: #1f1f1f;
  --Background2: #2d2d2d;
  --Foreground2: #ccc;
  --FixedOffsetY: 1.5rem;
  --FixedOffsetX: 2rem;
  --Stroke3: #9cdcfe;
  --BorderRadius: 1rem;
  --LinkHover: #fff;

  /* Add more variables here */

  font-family: Aptos, Helvetica, sans-serif;
  font-size: 16px;
  color: var(--Text);
  background-color: var(--Background);
  scroll-behavior: smooth;
  font-weight: 100;
  padding-bottom: 3rem;
}

a {
  color: var(--Foreground2);
  text-decoration: none;
}
a:hover, a:focus {
  color: var(--LinkHover)
} 

li {
  margin: 0.25rem 1rem 0.25rem;
}

.how h3, .benefits h3 {
  margin-bottom: 0;
}

h3, h4 {
  color: #fff;
  font-weight: 400;
}

header {
  position: sticky;
  display: block;
  z-index: 10;
  top: 0;
  height: 6rem;
}

main {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  /* TODO: temp hack. make this reflow better. */
  max-width: 70rem;
  margin: 0 auto;
  text-align: center;
  align-items: center;
  justify-content: flex-start;
  padding: 7.25rem 0;
}

.diagram {
  border-radius: var(--BorderRadius);
}



.learn-more-container,
.learn-more {
  border-radius: 0.5rem;
}
.learn-more-container {
  padding: 1px;
  background: linear-gradient(20deg, #0090ff 0%, #8dc8e8 70%);
}
.learn-more {
  display: flex;
  padding: 12px 16px;
  letter-spacing: 0.1rem;
  justify-content: center;
  align-items: center;
  gap: 8px;
  background-color: var(--Background);
  font-weight: 600;
  text-transform: ;
}

.main-subheader {
  font-size: 6rem;
  font-weight: 400;
  line-height: 100%;
  max-width: 75%;
  background: linear-gradient(to top, #a6d9ff, #fff 30%);
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
}

.short-desc {
  font-size: 1.25rem;
  max-width: 60%;
  color: var(--Foreground2);
}

.sitename {
  font-size: 1rem;
  font-weight: normal;
  position: fixed;
  top: var(--FixedOffsetY);
  left: var(--FixedOffsetX);
  z-index: 100;
}

.github {
  display: flex;
  gap: 0.25rem;
}

.share {
  position: fixed;
  top: var(--FixedOffsetY);
  right: var(--FixedOffsetX);
}

button {
  display: inline-flex;
  padding: 12px 16px;
  justify-content: center;
  align-items: center;
  gap: 8px;

  border-radius: var(--05-rem, 8px);
  border: 1px solid var(--Gradient, #0090ff);
}

nav ul {
  display: inline-flex;
  padding: 1rem;
  justify-content: center;
  align-items: center;
}

nav li {
  list-style: none;
}

nav {
  border-radius: 1000px;
  background: rgba(43, 43, 43, 0.75);
  box-shadow: 0px 32px 64px 0px rgba(0, 0, 0, 0.24);
  -webkit-backdrop-filter: blur(50px);
  backdrop-filter: blur(50px);
  position: sticky;
  top: 0.5rem;
  z-index: 100;
}
nav .mobile {
  display: none;
}

pre {
  display: inline-block;
  max-width: 100%;
}

pre code {
  display: inline-block;
  text-align: left;
  font-family: "Fira Code", Consolas, monospace;
  font-size: 0.75rem;
  background-color: #2d2d2d;
  color: #f8f8f2;
  border-radius: var(--BorderRadius);
  overflow-x: auto;
  padding: 1rem;
  max-width: 100%;
}

.faq {
  text-align: left;
  width: 20rem;
}

h3 {
  font-size: 1.5rem;
  font-weight: bold;
  margin-bottom: 1rem;
}

article p,
article ul {
  font-size: 0.875rem;
}

p {
  font-size: 1rem;
  color: var(--Foreground2);
}

.info-block {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 3rem;
  width: 100%;
  padding: 6rem 0 0;
}

.multi-code {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: flex-start;
  width: 35rem;
}

.benefits {
  display: grid;
  grid-template-columns: 100%;
  padding: 6rem 3rem 0 5rem;
  grid-gap: 1rem;
}
.benefits h3 {
  text-align: left;
}

.benefits article {
  overflow: hidden;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  width: 100%;
}

.cell {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  background-color: var(--Background2);
  color: var(--Foreground2);
  border-radius: var(--BorderRadius);
  padding: 2rem;
  text-align: left;
  gap: 0.5rem;
}

.item0 {
  grid-area: 1 / 1 / 2 / 7;
  display: grid;
  background-color: var(--Background2);
  border-radius: var(--BorderRadius);
  align-items: center;
}
.item1 {
  grid-area: 1 / 1 / 2 / 3;
}
.item2 {
  grid-area: 1 / 3 / 2 / 5;
}
.item3 {
  grid-area: 1 / 5 / 2 / 7;
}
.item4 {
  grid-area: 2 / 1 / 3 / 4;
  flex-direction: row;
  padding-right: 0;
}
.item5 {
  grid-area: 2 / 4 / 3 / 7;
  flex-direction: row;
  padding-right: 0;
  padding-bottom: 0;
}
.item4 div,
.item5 div {
  flex-grow: 4;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.item4,
.item5 {
  position: relative;
}
.item4 img,
.item5 img {
  position: relative;
  bottom: 0;
  right: 0;
  align-self: flex-end;
  mix-blend-mode: screen;
}

.logo-container {
  overflow: hidden;
  position: relative;
  height: auto;
}
.logo-container::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 50px; /* The height of the gradient overlay */
  background: linear-gradient(transparent, 50%, var(--Background));
}
.large-logo {
  width: 75%;
  position: relative;
  bottom: -600px; /* Start below the container */
  opacity: 0;
  transition: opacity 3s;
  animation: slideUp 1.5s forwards,
    bobbing 3s infinite 1.54s cubic-bezier(0.42, 0, 0.58, 1);
}

@keyframes slideUp {
  to {
    opacity: 1;
    bottom: 0;
  }
}

@keyframes bobbing {
  0%,
  100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(15px);
  }
}

.pill {
  display: inline-block;
  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
  border-radius: 0.75rem;
  height: auto;
  background-color: var(--Background2);
  color: var(--Foreground2);
  font-size: 0.75rem;
  font-size: 0.75rem;
  text-align: center;
  border: 1px solid var(--Foreground2);
  border-color: var(--Stroke3);
  font-style: normal;
  margin-bottom: 0.25rem;
}

.bullet-number {
  width: 1rem;
  height: 1rem;
  padding: 0.3rem;
  border-radius: 1rem;
}

/* Code theme colors */
s {
  text-decoration: none;
}
.prompty .c0 {
  color: #d4d4d4;
}
.prompty .c1 {
  color: #ce9178;
}
.prompty .c2 {
  color: #6a9955;
}
.prompty .c3 {
  color: #569cd6;
}

.py .c0 {
  color: #c678dd;
}
.py .c1 {
  color: #d86972;
}
.py .c2 {
  color: #7f848e;
}
.py .c3 {
  color: #61aeed;
}

.doc-item {
  box-sizing: border-box;
  text-align: left;
  display: grid;
  grid-template-columns: 35% 65%;
  grid-gap: 3rem;
  padding: 6rem 6rem 0 6rem;
  width: 100%;
}

.doc-item article {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.doc-item .code-box {
  position: relative;
  max-width: 100%;
  max-height: 464px;
}
.what-is {
  display: grid;
  grid-template-columns: 100%;
  grid-gap: 1rem;
  padding: 6rem 3rem 0 5rem;
}
.what-is article {
  text-align: center;
}
.what-is .diagram {
  display: grid;
  grid-template-columns: repeat(2, 50%);
  background-color: var(--Background2);
  border-radius: var(--BorderRadius);
  max-width: 100%;
  align-items: center;
  /* justify-content: center; */
  padding: 0 8rem;
  gap: 3rem;
}
.what-is .content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem 0;
}

.doc-item.how {
  display: grid;
  grid-template-columns: 100%;
  grid-gap: 1rem;
  padding: 6rem 3rem 0 5rem;
}

.how .card-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 1rem;
}

.doc-item ul {
  margin: 1rem;
}

.doc-item li {
  margin: 0.5rem 0 0 1rem;
}

.code-box img {
  width: 100%;
}

.copy-button {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  padding: 0.5rem;
  color: var(--Foreground2);
  background-color: transparent;
  border: none;
  border-radius: 8px;
  cursor: pointer;
}
.copy-button:hover,
.copy-button:focus {
  background-color: var(--Background);
}
.copy-button:active {
  background-color: var(--Background2);
}

/* For smaller screens */
@media (max-width: 900px) {
  .main-subheader {
    font-size: 3rem;
  }

  .doc-item {
    grid-template-columns: 100%;
    grid-gap: 1rem;
    padding: 6rem 2rem 0 2rem;
  }

  .what-is .diagram {
    grid-template-columns: 100%;
    grid-gap: 0rem;
    padding: 0 2rem;
  }
  .diagram img {
    max-width: 100%;
  }

  nav li:not(.mobile) {
    display: none;
  }

  nav .mobile {
    display: block;
  }

  nav .github {
    display: flex;
  }

  header {
    display: none;
  }
  
  .how .card-container {
    display: grid;
    grid-template-columns: 100%;
    gap: 1rem;
  }

  .doc-item.how {
    padding: 2rem;
  }

  .item0{
    display: block;
  }
  
  .grid-container{
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }
}

@media (max-width: 600px) {
  .item4, .item5 {
    flex-direction: column;
  }
  
  
  .benefits {
    padding: 2rem;
  }

}

